k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-gateway
spec:
  replicas: 2
  selector:
    matchLabels: { app: harbor-gateway }
  template:
    metadata:
      labels: { app: harbor-gateway }
    spec:
      containers:
        - name: gateway
          image: ghcr.io/ihassanusman/harbor-gateway:1.0.0
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8080 }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-shipment
spec:
  replicas: 3
  selector:
    matchLabels: { app: harbor-shipment }
  template:
    metadata:
      labels: { app: harbor-shipment }
    spec:
      containers:
        - name: shipment
          image: ghcr.io/ihassanusman/harbor-shipment:1.0.0
          resources:
            requests: { cpu: 250m, memory: 512Mi }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-gateway
                port: { number: 80 }
